<resources>
    <string name="app_name">FileLocalShare</string>
    <string name="default_path">/storage/emulated/0/</string>
    <string name="default_path_name">inner_storage/</string>

    <string name="bytesDesignation">B</string>
    <string name="kilobytesDesignation">KB</string>
    <string name="megabytesDesignation">MB</string>
    <string name="gigabytesDesignation">GB</string>
    <string name="terabytesDesignation">TB</string>

    <string name="inSecondDesignation">/s</string>
    <string name="connect">Connect</string>
    <string name="howToConnect"><u>How to connect?</u></string>

    <string name="storage">Storage</string>
    <string name="documents">Documents</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="downloads">Downloads</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="title_activity_file_explorer">file_explorer</string>
    <string name="name_sort">Name</string>
    <string name="type_sort">Type</string>
    <string name="size_sort">Size</string>
    <string name="last_modified_sort">Last modified</string>
    <string name="ascending_sort">Ascending</string>
</resources>
